# ar-marker-detection

./: .gitignore  CMakeLists.txt
config/: application.yaml
feature-detection/: CMakeLists.txt
feature-detection/config/: application.yaml  binarize.yaml  camera.yaml
feature-detection/inc/: camera.h  config.h  feature_detector.h  marker.h  misc.h  path.h  stopwatch.h
feature-detection/src/: camera.cpp  config.cpp  file_io.cpp  main.cpp  marker.cpp  marker_detector.cpp  misc.cpp
inc/: config.h  file_io.h  marker.h  marker_detector.h  misc.h
src/: camera.cpp  feature_detector.cpp  main.cpp  marker.cpp  marker_detector.cpp  misc.cpp  path.cpp
